@@ -1,3 +1,7 @@
+2006-10-12  Sam Steingold  <sds@podval.org>
+
+	* macro8.tst: test for [ 1575946 ] broken COMPILE of APPLY in LABELS
+
 2006-10-01  Sam Steingold  <sds@gnu.org>
 
 	* setf.tst: test DOCUMENTATION on special operators
